# docs/swagger.yaml
@@ -1,6 +1,32 @@
 basePath: /
 definitions:
   model.BookRequest:
+    properties:
+      judul:
+        type: string
+      jumlah_halaman:
+        type: integer
+      keterangan:
+        type: string
+      no_isbn:
+        type: string
+      penerbit:
+        type: string
+      penulis:
+        type: string
+      tahun_terbit:
+        type: integer
+      tanggal_penerimaan:
+        example: YYYY-MM-DD
+        type: string
+    required:
+    - judul
+    - jumlah_halaman
+    - no_isbn
+    - penerbit
+    - penulis
+    - tahun_terbit
+    - tanggal_penerimaan
     type: object
   model.ResponseError:
     properties:
@@ -66,6 +92,12 @@ paths:
   /books/{id}:
     delete:
       operationId: delete-buku
+      parameters:
+      - description: id buku
+        in: path
+        name: id
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -82,6 +114,12 @@ paths:
       - Book
     get:
       operationId: get-buku-by-id
+      parameters:
+      - description: id buku
+        in: path
+        name: id
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -102,6 +140,11 @@ paths:
       description: Semua wajib diisi kecuali keterangan
       operationId: update-buku
       parameters:
+      - description: id buku
+        in: path
+        name: id
+        required: true
+        type: string
       - description: Request Body
         in: body
         name: Input
